src/tests/testfiles/binary-operator-types.txt
AST:
program
  | main
  |   | statements
  |   |   | ==
  |   |   |   | int - 1
  |   |   |   | float - 2.0
  |   |   | return
  |   |   |   | int - 1

Error at 2:6: Comparison operator operands need to be of same type
1 == 2.0;
  ^

